# TeamVortex

./: CMakeCache.txt  CMakeLists.txt  README.md  firebase.json  pubspec.yaml
android/app/: build.gradle  google-services.json
android/gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/frontend/viewmodels/: chats_vm.dart  create_project_vm.dart  login_register_vm.dart  nav_bar_vm.dart  project_feed_vm.dart  project_notes_vm.dart  projects_vm.dart  settings_vm.dart
lib/frontend/views/: chats_page.dart  create_project_page.dart  login_page.dart  project_feed_page.dart  project_notes_page.dart  projects_page.dart  register_page.dart  settings_page.dart
lib/models/entities/: Account.dart  ChatRoom.dart  Message.dart  Project.dart  ProjectNote.dart
lib/models/services/: firebase_auth_services.dart  firebase_firestore_services.dart
lib/viewmodels/: chats_vm.dart  create_project_vm.dart  login_register_vm.dart  nav_bar_vm.dart  project_feed_vm.dart  project_notes_vm.dart  project_overview_vm.dart  projects_vm.dart  settings_vm.dart
lib/views/: chats_page.dart  chats_view.dart  create_project.dart  create_project_page.dart  home_page.dart  login_page.dart  project_feed_page.dart  project_notes_page.dart  project_overview_page.dart  projects_page.dart  register_page.dart  settings_page.dart  welcome_page.dart
lib/views/stateless/: login_page.dart  register_page.dart  welcome_page.dart
lib/views/widgets/: inputs.dart  note_templates.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+19 files in other folders)
